--- a/tasks/facts.yml
+++ b/tasks/facts.yml
@@ -2,8 +2,10 @@
 
 - block:
     - name: Check variables
-      assert:
+      ansible.builtin.assert:
         that:
           - deconz_platform in deconz_platforms
           - deconz_role_action in deconz_role_actions
   tags: always
+
+...
